# cloud-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  process.rs
src/config_loader/: config_parser.rs  config_persister.rs  mod.rs  process_detector.rs  regex_utils.rs
src/core/: app_state.rs  background_tasks.rs  mod.rs
src/tools/: mod.rs
src/tools/be/: be_http_client.rs  be_vars.rs  jmap.rs  list.rs  memz.rs  mod.rs  pipeline_tasks.rs  pipeline_tasks_tool.rs  pstack.rs  response_handler.rs
src/tools/common/: be_webserver.rs  format_utils.rs  fs_utils.rs  host_selection.rs  jmap.rs  mod.rs
src/tools/fe/: jmap.rs  jstack.rs  list.rs  mod.rs  profiler.rs
src/tools/fe/routine_load/: error_checker.rs  job_lister.rs  job_manager.rs  log_parser.rs  mod.rs  models.rs  performance_analyzer.rs  traffic_monitor.rs
src/tools/fe/table_info/: browser.rs  mod.rs  ops.rs  sql.rs
src/tools/mysql/: client.rs  cluster.rs  credentials.rs  mod.rs  parser.rs
src/ui/: dialogs.rs  error_handlers.rs  menu.rs  mod.rs  selector.rs  service_handlers.rs  tool_executor.rs  utils.rs
