[package]
name = "cloud-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloud-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dialoguer = "0.11"
console = "0.16.0"
wait-timeout = "0.2.1"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
