[package]
name = "cloud-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cloud-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dialoguer = "0.11"
console = "0.16.0"
wait-timeout = "0.2.1"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
regex = "1.11.1"
once_cell = "1.21.3"
aes-gcm = "0.10"
rand = "0.9.2"
base64 = "0.22.1"
